@@ -953,6 +953,9 @@ Release 0.19.0 - Unreleased
     HADOOP-4427. Adds the new queue/job commands to the manual.
     (Sreekanth Ramakrishnan via ddas)
 
+    HADOOP-4278. If the primary datanode fails in DFSClent, remove it from
+    the pipe line.  (dhruba via szetszwo)
+
 Release 0.18.2 - Unreleased
 
   BUG FIXES
